[project]
name = "reo-tools"
description = "Signal-processing pipeline for rheography (RVG) data: computes central aortic pressure with caching, CLI and progress feedback"
version = "0.1.0"
authors = [
    {name = "Oleksandr Vorobei", email = "oleksandr.vorobei@anvileight.com"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas<3.0.0,>=2.2.3",
    "numpy<3.0.0,>=2.2.5",
    "scipy<2.0.0,>=1.15.2",
    "pyarrow<21.0.0,>=20.0.0",
    "alive_progress<4.0.0,>=3.2.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.1,<5.0.0",
    "ruff>=0.7.4,<1.0.0",
]

[project.scripts]
rvg = "reo_tools.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reo_tools"]

[tool.ruff]
fix = true
line-length = 120
target-version = "py312"
exclude = ["venv", ".venv"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
strict = true
exclude = ["venv", ".venv"]
